<resources>
	<string name="app_name">Shop with mom</string>

	<string name="default_currency_symbol">$</string>
	
	<string name="comparison_entry">Comparison entry</string>
	<string name="unit_of_measure">Unit of measure</string>
	<string name="unit_of_measure_hint">Unit of measure&#8230;</string>
	<string name="price">Price</string>
	<string name="price_hint">Price&#8230;</string>
	<string name="cancel">Cancel</string>
	<string name="save">Save</string>

	<string name="fab_add">Add</string>

	<string name="total_placeholder">Total&#8230;</string>
	
	<string name="rv_compare_items_unit">Unit:</string>
	<string name="rv_compare_items_price">Price:</string>
	<string name="rv_compare_items_price_per_unit">Price per unit:</string>

	<string name="rv_item_quantity">Quantity:</string>
	<string name="rv_item_price">Price:</string>
	<string name="rv_item_item_total">Item total:</string>

	<string name="menu_close">Close</string>
	
	<string name="menu_cab_compare_items_delete">Delete</string>
	<string name="menu_cab_compare_items_delete_description">Delete items</string>
	
	<string name="menu_options_compare_delete_all">Delete all</string>
	<string name="menu_options_compare_delete_settings">Settings</string>

	<string name="menu_cab_main_share">Share</string>
	<string name="menu_cab_main_share_items">Share items</string>
	<string name="menu_cab_main_delete">Delete</string>
	<string name="menu_cab_main_delete_items">Delete items</string>
	
	<string name="menu_options_search">Search</string>
	<string name="menu_options_delete_shopping_cart">Delete shopping cart</string>
	<string name="menu_options_settings">Settings</string>

	<string name="general_shared_preferences_currency_category_currency">Currency</string>
	<string name="general_shared_preferences_currency_ecs">Enter currency symbol</string>
	<string name="general_shared_preferences_currency_summary">The currency symbol that will be used throughout the application</string>
	<string name="general_shared_preferences_currency_title">Currency Symbol</string>

	<string name="compare_item_adapter_confirm_delete_action_title">Confirm delete action</string>
	<string name="compare_item_adapter_confirm_delete_action_msg">Are you sure you want to delete this item?</string>
	<string name="compare_item_adapter_confirm_delete_action_yes">Yes</string>
	<string name="compare_item_adapter_confirm_delete_action_no">No</string>

	<string name="item_adapter_confirm_delete_action_title">Confirm delete action</string>
	<string name="item_adapter_confirm_delete_action_msg">Are you sure you want to delete the selected items?</string>
	<string name="item_adapter_confirm_delete_action_yes">Yes</string>
	<string name="item_adapter_confirm_delete_action_no">No</string>
	<string name="item_adapter_share_cab_price">Price:</string>
	<string name="item_adapter_share_cab_quantity">Quantity:</string>
	<string name="item_adapter_share_cab_item_total">Item total:</string>
	<string name="item_adapter_share_cab_ppu">Price per unit:</string>
	<string name="item_adapter_share_cab_date">Date:</string>
	<string name="item_adapter_share_cab_selected">selected</string>
	<string name="item_adapter_share_cab_unit2">Unit</string>

	<string name="compare_item_dialog_fragment_req_unit">Unit is required</string>
	<string name="compare_item_dialog_fragment_req_price">Price is required</string>
	<string name="compare_item_dialog_fragment_unit_gtz">Unit of measure must be greater than zero</string>
	<string name="compare_item_dialog_fragment_price_gtz">Price must be greater than zero</string>

	<string name="shopping_item_activity_in_req">Item name is required</string>
	<string name="shopping_item_activity_uom_req">Unit of measure is required</string>
	<string name="shopping_item_activity_uom_gtz">Unit of measure must be greater than zero</string>
	<string name="shopping_item_activity_price_req">Price is required</string>
	<string name="shopping_item_activity_price_gtz">Price must be greater than zero</string>
	<string name="shopping_item_activity_ud_req">Unit description is required</string>
	<string name="shopping_item_activity_quantity_req">Quantity is required</string>
	<string name="shopping_item_activity_quantity_gtz">Quantity must be greater than zero</string>

	<string name="tabbed_activity_item_comparisons">Item Comparisons</string>
	<string name="tabbed_activity_shopping_list">Shopping List</string>

	<string name="view_pager_fragment_ci_confirm_delete_action_title">Confirm delete action</string>
	<string name="view_pager_fragment_ci_confirm_delete_action_msg">Are you sure you want to delete all items?</string>
	<string name="view_pager_fragment_ci_confirm_delete_action_yes">Yes</string>
	<string name="view_pager_fragment_ci_confirm_delete_action_no">No</string>

	<string name="view_pager_fragment_il_total">Total</string>
	<string name="view_pager_fragment_il_confirm_delete_action_title">Confirm delete action</string>
	<string name="view_pager_fragment_il_confirm_delete_action_msg">Are you sure you want to delete all shopping list items?</string>
	<string name="view_pager_fragment_il_confirm_delete_action_yes">Yes</string>
	<string name="view_pager_fragment_il_confirm_delete_action_no">No</string>

	<string name="activity_shopping_item_item_name">Item name</string>
	<string name="activity_shopping_item_item_name_hint">Item name&#8230;</string>
	<string name="activity_shopping_item_item_desc">Item description</string>
	<string name="activity_shopping_item_item_desc_hint">Item description&#8230;</string>
	<string name="activity_shopping_item_unit_desc">Unit description</string>
	<string name="activity_shopping_item_unit_desc_hint">Unit description&#8230;</string>
	<string name="activity_shopping_item_uom">Unit of measure</string>
	<string name="activity_shopping_item_uom_hint">Unit of measure&#8230;</string>
	<string name="activity_shopping_item_price">Price</string>
	<string name="activity_shopping_item_price_hint">Price&#8230;</string>
	<string name="activity_shopping_item_quantity">Quantity</string>
	<string name="activity_shopping_item_quantity_hint">Quantity&#8230;</string>
	<string name="activity_shopping_item_save">Save</string>

	<string name="searchable_search_hint">Search</string>

	<string name="activity_settings_title">Settings</string>


</resources>
