<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item android:id="@+id/mainSearch"
          android:title="@string/menu_options_search"
          android:icon="@drawable/search_icon"
          app:showAsAction="collapseActionView|ifRoom"
          app:actionViewClass="androidx.appcompat.widget.SearchView"
          app:iconTint="@color/colorSecondaryText"
          />

    <item android:id="@+id/itemListDeleteShoppingCart"
          android:title="@string/menu_options_delete_shopping_cart"
          android:icon="@drawable/delete_shopping_cart_icon"
          app:showAsAction="collapseActionView|ifRoom"
          app:iconTint="@color/colorSecondaryText" />

     <item android:id="@+id/optionsMenuSettings"
          android:title="@string/menu_options_settings"
          android:icon="@drawable/settings_icon"
          app:showAsAction="never"
          app:iconTint="@color/colorSecondaryText" />
</menu>