<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/linear_layout_border_shadow"
    android:baselineAligned="false"
    android:layout_margin="4dp" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/mainItemNameWithUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rv_item_quantity"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/mainQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rv_item_price"
                android:layout_marginLeft="14dp"
                android:layout_marginStart="14dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/mainItemPriceCurrencyLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:text="@string/default_currency_symbol"
                android:textSize="18sp" />
                
            <TextView
                android:id="@+id/mainItemPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp" />

            
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rv_item_item_total"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/mainItemTotalCurrencyLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:text="@string/default_currency_symbol"
                android:textSize="18sp" />
                
            <TextView
                android:id="@+id/mainItemTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/mainItemCreatedAt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:layout_marginStart="14dp"
                android:textStyle="bold"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal">
        <CheckBox
                android:id="@+id/selectedItemCAB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:text=""
                android:textSize="12sp" />
    </LinearLayout>


</LinearLayout>